--- a/bienvenidos.html
+++ b/bienvenidos.html
@@ -41,7 +41,7 @@
 <body>
     <div id="welcome-container">
         <h1>Bienvenidos al Juego de Ahorcado</h1>
-        <p>¿Quieres saber por qué nos llamamos así? Presiona Jugar y lo averiguarás.</p>
+        <p>¿Quieres saber por qué nos llamamos asíiiiii? Presiona Jugar y lo averiguarás.</p>
         <button onclick="startGame()">Jugar</button>
         <button onclick="goToInstructions()">Instrucciones</button>
     </div>
