--- a/ahorcado.html
+++ b/ahorcado.html
@@ -172,31 +172,31 @@
     <script>
         const levels = {
             'C': [
-                { word: "CIENCIA", description: "Conjunto de conocimientos ordenados sistemáticamente con el fin de describir realidades y de dar respuestas a diversos interrogantes. (7 letras)" },
-                { word: "CONOCIMIENTO", description: "Capacidad que tiene el ser humano para identificar, observar y analizar lo que sucede en la realidad y lo utiliza para su beneficio. (11 letras)" },
-                { word: "COMPUTACION", description: "Proceso de diseñar y construir un sistema de cómputo, incluyendo hardware y software. (11 letras)" },
-                { word: "COMUNICACION", description: "Intercambio de información entre dos o más partes, utilizando símbolos, palabras o gestos. (13 letras)" },
-                { word: "CREATIVIDAD", description: "Facultad de crear, inventar y producir nuevas ideas, conceptos o cosas originales. (11 letras)" },
-                { word: "CULTURA", description: "Conjunto de conocimientos, costumbres, creencias y valores que caracterizan a un grupo social. (7 letras)" },
-                { word: "CIBERNETICA", description: "Ciencia que estudia los sistemas de control, comunicación y regulación en seres vivos y máquinas. (11 letras)" },
-                { word: "CIRCUITO", description: "Conjunto de componentes electrónicos interconectados que realizan una función específica. (8 letras)" },
+                { word: "CIENCIA", description: "Palabra que comienza con C. Conjunto de conocimientos ordenados sistemáticamente con el fin de describir realidades y de dar respuestas a diversos interrogantes. (7 letras)" },
+                { word: "CONOCIMIENTO", description: " Palabra que comienza con C. Capacidad que tiene el ser humano para identificar, observar y analizar lo que sucede en la realidad y lo utiliza para su beneficio. (11 letras)" },
+                { word: "COMPUTACION", description: "Palabra que comienza con C. Proceso de diseñar y construir un sistema de cómputo, incluyendo hardware y software. (11 letras)" },
+                { word: "COMUNICACION", description: "Palabra que comienza con C. Intercambio de información entre dos o más partes, utilizando símbolos, palabras o gestos. (13 letras)" },
+                { word: "CREATIVIDAD", description: "Palabra que comienza con C. Facultad de crear, inventar y producir nuevas ideas, conceptos o cosas originales. (11 letras)" },
+                { word: "CULTURA", description: "Palabra que comienza con C. Conjunto de conocimientos, costumbres, creencias y valores que caracterizan a un grupo social. (7 letras)" },
+                { word: "CIBERNETICA", description: "Palabra que comienza con C. Ciencia que estudia los sistemas de control, comunicación y regulación en seres vivos y máquinas. (11 letras)" },
+                { word: "CIRCUITO", description: "Palabra que comienza con C. Conjunto de componentes electrónicos interconectados que realizan una función específica. (8 letras)" },
             ],
             'I': [
-                { word: "INOVACION", description: "Introducción de novedades o cambios en un producto, idea o proceso. (9 letras)" },
-                { word: "INTELIGENCIA", description: "Capacidad de aprender, razonar, resolver problemas y adaptarse al entorno. (10 letras)" },
-                { word: "INVESTIGACION", description: "Proceso social que busca dar respuestas a problemas del conocimiento. (13 letras)" },
-                { word: "IMAGINACION", description: "Facultad de crear imágenes, ideas o conceptos en la mente que no están presentes en la realidad. (11 letras)" },
-                { word: "IDENTIDAD", description: "Conjunto de características que individualizan a una persona o cosa y la distinguen de las demás. (9 letras)" },
-                { word: "IGUALDAD", description: "Principio que postula la equiparación de derechos, oportunidades y trato para todas las personas. (7 letras)" },
-                { word: "IMPREDICIBLE", description: "Que no se puede prever ni anticipar con certeza. (12 letras)" },
+                { word: "INOVACION", description: "Palabra que comienza con I. Introducción de novedades o cambios en un producto, idea o proceso. (9 letras)" },
+                { word: "INTELIGENCIA", description: "Palabra que comienza con I. Capacidad de aprender, razonar, resolver problemas y adaptarse al entorno. (10 letras)" },
+                { word: "INVESTIGACION", description: "Palabra que comienza con I. Proceso social que busca dar respuestas a problemas del conocimiento. (13 letras)" },
+                { word: "IMAGINACION", description: " Palabra que comienza con I. Facultad de crear imágenes, ideas o conceptos en la mente que no están presentes en la realidad. (11 letras)" },
+                { word: "IDENTIDAD", description: "Palabra que comienza con I. Conjunto de características que individualizan a una persona o cosa y la distinguen de las demás. (9 letras)" },
+                { word: "IGUALDAD", description: "Palabra que comienza con I. Principio que postula la equiparación de derechos, oportunidades y trato para todas las personas. (7 letras)" },
+                { word: "IMPREDICIBLE", description: "Palabra que comienza con I. Que no se puede prever ni anticipar con certeza. (12 letras)" },
             ],
             'T': [
-                { word: "TENDENCIA", description: "Dirección o inclinación hacia cierto modo de comportamiento, pensamiento o acción. (8 letras)" },
-                { word: "TRANSFORMAR", description: "Cambiar la forma, naturaleza o estructura de algo. (11 letras)" },
-                { word: "TECNOLOGIA", description: "Conjunto de conocimientos y técnicas aplicadas para el desarrollo de productos y servicios. (10 letras)" },
-                { word: "TRABAJO", description: "Actividad que realiza una persona para producir bienes o servicios a cambio de una compensación. (7 letras)" },
-                { word: "TENACIDAD", description: "Persistencia y firmeza en la realización de un objetivo a pesar de las dificultades. (8 letras)" },
-                { word: "TALENTO", description: "Capacidad natural o habilidad especial para realizar ciertas actividades de manera destacada. (7 letras)" },
+                { word: "TENDENCIA", description: "Palabra que comienza con T. Dirección o inclinación hacia cierto modo de comportamiento, pensamiento o acción. (8 letras)" },
+                { word: "TRANSFORMAR", description: "Palabra que comienza con T. Cambiar la forma, naturaleza o estructura de algo. (11 letras)" },
+                { word: "TECNOLOGIA", description: "Palabra que comienza con T. Conjunto de conocimientos y técnicas aplicadas para el desarrollo de productos y servicios. (10 letras)" },
+                { word: "TRABAJO", description: "Palabra que comienza con T. Actividad que realiza una persona para producir bienes o servicios a cambio de una compensación. (7 letras)" },
+                { word: "TENACIDAD", description: "Palabra que comienza con T. Persistencia y firmeza en la realización de un objetivo a pesar de las dificultades. (8 letras)" },
+                { word: "TALENTO", description: "Palabra que comienza con T. Capacidad natural o habilidad especial para realizar ciertas actividades de manera destacada. (7 letras)" },
             ],
         };
 
@@ -292,10 +292,11 @@
     }
 }
 
-        function showRetryButton() {
-            const loseMessage = document.getElementById('lose-message');
-            loseMessage.style.display = 'block';
-        }
+function showRetryButton() {
+    const loseMessage = document.getElementById('lose-message');
+    loseMessage.style.display = 'block';
+    displayWordAndDefinition(); // Agrega esta línea para borrar el contenido
+}
 
         function retryLevel() {
             resetGame();
@@ -305,11 +306,10 @@
         }
 
         function displayWordAndDefinition() {
-            const wordAndDefinitionContainer = document.getElementById('word-and-definition');
-            if (currentWordIndex === currentLevel.length - 1) {
-                wordAndDefinitionContainer.innerHTML = `<p>Palabra: ${currentWord}</p><p>Definición: ${currentLevel[currentWordIndex].description}</p>`;
-            }
-        }
+    const wordAndDefinitionContainer = document.getElementById('word-and-definition');
+    wordAndDefinitionContainer.innerHTML = ''; // Vacía el contenido
+}
+
 
         function showNextLevelButton() {
             const nextLevelButton = document.getElementById('next-level-button');
@@ -325,14 +325,14 @@
         }
 
         function nextLevel() {
-        currentWordIndex++;
-        if (currentWordIndex < currentLevel.length) {
-            resetGame();
-            startGame();
-        } else {
-            showWinMessage();
-        }
+    currentWordIndex++;
+    if (currentWordIndex < currentLevel.length) {
+        resetGame();
+        startGame();
+    } else {
+        showWinMessage(); // Llama a la función para mostrar "Ganaste"
     }
+}
 
         function resetGame() {
             currentWord = currentLevel[currentWordIndex].word.toUpperCase();
@@ -376,6 +376,13 @@
             const levelInfoContainer = document.getElementById('level-info');
             levelInfoContainer.textContent = `Nivel ${currentWordIndex + 1}/${currentLevel.length}`;
         }
+        function showWinMessage() {
+    const wordAndDefinitionContainer = document.getElementById('word-and-definition');
+    wordAndDefinitionContainer.innerHTML = '';
+    
+    const winMessage = document.getElementById('win-message');
+    winMessage.style.display = 'block';
+}
 
         window.onload = startGame;
     </script>
